# stegpy

./: .gitignore  AGENTS.md  LICENSE  Quincas Borba.txt  README.md  crypt.py  lsb.py  pyproject.toml  requirements.txt  setup.py  steg.py
stegpy/: __init__.py  crypt.py  lsb.py  steg.py  test.npy  tests.py  video.py  web.py
tests/: test_cli.py  test_crypt.py  test_hosts.py  test_lsb.py  test_video.py  test_web.py
web-demo/: app.js  index.html  styles.css
