[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "stegpy"
version = "0.1.0"
description = "A program for encoding information in image and audio files through steganography."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dhsdshdhk" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "cryptography",
    "Pillow",
    "jpeglib",
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/dhsdshdhk/stegpy"

[project.scripts]
stegpy = "stegpy.steg:main"

[tool.setuptools.packages.find]
include = ["stegpy*"]

[dependency-groups]
dev = [
    "httpx>=0.24; python_version < '3.10'",
    "httpx2>=2.1; python_version >= '3.10'",
    "pytest>=8.3.5,<9",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
