[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stegpy"
version = "0.2.0"
description = "A program for encoding information in image, audio, and video files through steganography."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dhsdshdhk" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "cryptography",
    "Pillow",
    "jpeglib",
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/izcoser/stegpy"

[project.scripts]
stegpy = "stegpy.steg:main"

[tool.setuptools.packages.find]
include = ["stegpy*"]

[tool.setuptools.data-files]
"web-demo" = [
    "web-demo/app.js",
    "web-demo/favicon.png",
    "web-demo/index.html",
    "web-demo/styles.css",
]

[dependency-groups]
dev = [
    "httpx>=0.24; python_version < '3.10'",
    "httpx2>=2.1; python_version >= '3.10'",
    "pytest>=8.3.5,<9",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
